# opengl-setup

./: CMakeLists.txt  README.md
src/: main.cpp
